src/main/java/io/brito/examples/kafkaproducerapi/resource/error/ErrorResponse.java
package io.brito.examples.kafkaproducerapi.resource.error;

import com.fasterxml.jackson.annotation.JsonInclude;
import java.util.List;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@Builder
@AllArgsConstructor
@NoArgsConstructor
@JsonInclude(JsonInclude.Include.NON_NULL)
public class ErrorResponse {

    private int statusCode;
    private List<ApiError> errors;
}
